--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -114,8 +114,8 @@
 
                                         <br>
 
-                                        <h2 class="text-center tracking-wider smoke " style = "padding-bottom: calc( 12 * 1.5em);">please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">application form</a>.</h2>
-
+                                        <h2 class="text-center tracking-wider smoke " >please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">application form</a>.</h2>
+                                        <h2 class="text-center tracking-wider smoke " style = "padding-bottom: calc( 12 * 1.5em);">Application Deadline: January 27, 2025</h2>
 
                                       
 
@@ -188,8 +188,8 @@
 
                                         <br>
 
-                                        <h2 class="text-center tracking-wider smoke " style = "padding-bottom: calc( 12 * 1.5em);">請填寫此<a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">表單</a>。</h2>
-
+                                        <h2 class="text-center tracking-wider smoke " >請填寫此<a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">表單</a>。</h2>
+                                        <h2 class="text-center tracking-wider smoke " style = "padding-bottom: calc( 12 * 1.5em);">報名截止日: 2025 / 1 /27</h2>
 
 
                                     </section>
