--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                                 <span class="uppercase">Biodesign & Other Things</span>
                                             </header>
 
-                                            <p>BIODESIGN & OTHER THINGS</p>
+                                            <p><span style="font-size: 1.8em;">BIODESIGN & OTHER THINGS</span></p>
                                             <p>creating through living systems & transdisciplinary literacy</p>
 
 
@@ -152,7 +152,7 @@
                                                         <tr class="border-b border-gray-300">
                                                             <td class="py-3 px-2 text-sm w-3/10 font-medium border-r border-gray-300">TIMELINE</td>
                                                             <td class="py-3 px-2 text-sm w-7/10">
-                                                                FEB ~ JUNE 2026<br>
+                                                                FEB ~ JULY 2026<br>
                                                                 EVERY SATURDAY FROM 9AM - 4PM<br>
                                                                 ~15 TOTAL SESSIONS<br>
                                                                 (EXACT SESSION DATES TBD)<br>
@@ -173,7 +173,7 @@
                                                         </tr>
                                                         <tr class="border-b border-gray-300">
                                                             <td class="py-3 px-2 text-sm w-3/10 font-medium border-r border-gray-300">APPLICATION DEADLINE</td>
-                                                            <td class="py-3 px-2 text-sm w-7/10">Application form link provided</td>
+                                                            <td class="py-3 px-2 text-sm w-7/10">01/15/2026</td>
                                                         </tr>
                                                     </tbody>
                                                 </table>
