--- a/index.html
+++ b/index.html
@@ -138,10 +138,29 @@
                                                         <tr class="border-b border-gray-300">
                                                             <td class="py-3 px-2 text-sm w-3/10 font-medium border-r border-gray-300">INSTRUCTORS</td>
                                                             <td class="py-3 px-2 text-sm w-7/10">
-                                                                LAURENT HSIA<br>
-                                                                <a href="https://hsurae.com/" target="_blank" rel="noopener noreferrer"><u>RAE YU-PING HSU</u></a><br>
-                                                                <a href="https://www.paulgong.co.uk/"><u>PAUL GONG</u></a><br>
-                                                                <a href="https://www.kukuangyi.com/" target="_blank" rel="noopener noreferrer"><u>KUANG-YI KU</u></a><br>
+                                                                <div class="flex items-center">
+                                                                    <span class="inline-block" style="min-width: 170px;">
+                                                                        <a href="https://hsurae.com/" target="_blank" rel="noopener noreferrer"><u>LAURENT HSIA</u></a>
+                                                                    </span>
+                                                                </div>
+                                                                <div class="flex items-center">
+                                                                    <span class="inline-block" style="min-width: 170px;">
+                                                                        <a href="https://hsurae.com/" target="_blank" rel="noopener noreferrer"><u>RAE YU-PING HSU</u></a>
+                                                                    </span>
+                                                                    <span class="ml-">徐叡平</span>
+                                                                </div>
+                                                                <div class="flex items-center">
+                                                                    <span class="inline-block" style="min-width: 170px;">
+                                                                        <a href="https://www.paulgong.co.uk/" target="_blank" rel="noopener noreferrer"><u>PAUL GONG</u></a>
+                                                                    </span>
+                                                                    <span class="ml-0">宮保睿</span>
+                                                                </div>
+                                                                <div class="flex items-center">
+                                                                    <span class="inline-block" style="min-width: 170px;">
+                                                                        <a href="https://www.kukuangyi.com/" target="_blank" rel="noopener noreferrer"><u>KUANG-YI KU</u></a>
+                                                                    </span>
+                                                                    <span class="ml-0">顧廣毅</span>
+                                                                </div>
                                                             </td>
                                                         </tr>
                                                         <tr class="border-b border-gray-300">
