--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         <article class=" max-w-3xl mx-auto bg-gray-100 rounded-2xl p-8 shadow-md">
 
                                             <header class="flex items-center text-xs space-x-4 text-gray-800 tracking-wide mb-6">
-                                                <span class="uppercase">2026 Program</span>
+                                                <span class="uppercase">2026 Course</span>
                                                 <span class="uppercase">/</span>
                                                 <span class="uppercase">Biodesign & Other Things</span>
                                             </header>
@@ -140,7 +140,7 @@
                                                             <td class="py-3 px-2 text-sm w-7/10">
                                                                 <div class="flex items-center">
                                                                     <span class="inline-block" style="min-width: 170px;">
-                                                                        <a href="https://hsurae.com/" target="_blank" rel="noopener noreferrer"><u>LAURENT HSIA</u></a>
+                                                                        <a href="https://laurenthsia.com/" target="_blank" rel="noopener noreferrer"><u>LAURENT HSIA</u></a>
                                                                     </span>
                                                                 </div>
                                                                 <div class="flex items-center">
@@ -167,7 +167,12 @@
                                                             <td class="py-3 px-2 text-sm w-3/10 font-medium border-r border-gray-300">INTENDED FOR</td>
                                                             <td class="py-3 px-2 text-sm w-7/10">HIGH SCHOOL STUDENTS / HIGH SCHOOL AGE</td>
                                                         </tr>
-                                                        
+
+                                                        <tr class="border-b border-gray-300">
+                                                            <td class="py-3 px-2 text-sm w-3/10 font-medium border-r border-gray-300">PREREQUISITE</td>
+                                                            <td class="py-3 px-2 text-sm w-7/10">ENGLISH LITERACY & CURIOUSITY</td>
+                                                        </tr>
+
                                                         <tr class="border-b border-gray-300">
                                                             <td class="py-3 px-2 text-sm w-3/10 font-medium border-r border-gray-300">TIMELINE</td>
                                                             <td class="py-3 px-2 text-sm w-7/10">
@@ -199,7 +204,7 @@
                                                 <br>
                                                 <br>
                                                 <p>BIODESIGN & OTHER THINGS is a project-oriented program that invites high school–age artists and scientists to explore the world through a transdisciplinary lens.</p>
-                                                <p>In this program, students will learn the basics of biodesign, bioart, and speculative design while engaging deeply concepts in biotechnology, AI, and related fields. More than that, we want students to imagine beyond the traditional classroom, beyond the internet’s “givens”—to not just solve problems predefined for them, but to understand the world more deeply, so as to discover what they really matters to them. </p>
+                                                <p>In this course, students will learn the basics of biodesign, bioart, and speculative design while engaging deeply concepts in biotechnology, AI, and related fields. More than that, we want students to imagine beyond the traditional classroom, beyond the internet’s “givens”—to not just solve problems predefined for them, but to understand the world more deeply, so as to discover what they really matters to them. </p>
                                                 <p><strong>They will develop their own project to be presented at the 2026 Biodesign Challenge in New York (MoMA & Parsons School of Design)</strong></p>
 
                                             </div>
