--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                                 </table>
                                                 <br>
                                                 <p><strong>BBIODESIGN & OTHER THINGS</strong> is a project-oriented course that invites high school–age artists and scientists alike to explore the world of biodesign, an emergent transdiciplinary field that bridges biotechnology, design, and art. </p>
-                                                <p>In this course, students will learn to think transdisciplinarily; they will learn how to utilize biodesign as a medium to engage deeply with concepts in biotechnology, AI, and other related fields. More than that, students will be invited to imagine beyond the traditional classroom, beyond the internet’s “givens”—to not just solve problems predefined for them, but to understand the complex world we live in more deeply, so as to discover what they really matters to them.</p>
-                                                <p><strong>They will develop their own project to be presented at the 2026 Biodesign Challenge in New York (MoMA & Parsons School of Design)</strong></p>
+                                                <p>In this course, students will learn to think transdisciplinarily; they will learn to utilize biodesign as a medium to engage with concepts in biotechnology, AI, and other related fields. More than that, students will be invited to imagine beyond the traditional classroom, beyond the internet’s “givens”—to not just solve problems predefined for them, but to understand the complex world we live in more deeply, so as to discover what they really matters to them.</p>
+                                                <p><strong>Students will develop their own project to be presented at the 2026 Biodesign Challenge in New York (MoMA & Parsons School of Design)</strong></p>
                                                 <br>
                                                 <div class="flex justify-center">
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSclGobxc6lo6TS5dt3gJp79_Tc-X7ii0wChd9GQ8lfTFa7A4w/viewform?usp=header"
@@ -222,7 +222,7 @@
     </a>
 </div>
 <br>
-<p><strong><u>BIODESIGN AS AN EMERGENT FIELD</u></strong></p>
+<p><strong><u>BIODESIGN, AN EMERGING FIELD</u></strong></p>
                                                 <P>“Biotechnology is spreading into every aspect of our lives—from our materials to our everyday products. As it becomes ubiquitous, society needs interdisciplinary thinkers to understand biotech’s impact and to come up with the next solutions…</P>
                                                 <P>Our goal is to encourage students to explore biotech’s entanglements within society—in the way it empowers people, contributes to structural inequities, and creates opportunities for change.” </P>
                                                 <p>- Daniel Grushkin, Biodesign Challenge.</p>
