--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                     </tbody>
                                                 </table>
                                                 <br>
-                                                <p><strong>BBIODESIGN & OTHER THINGS</strong> is a project-oriented course that invites high school–age artists and scientists alike to explore the world of biodesign, an emergent transdiciplinary field that bridges biotechnology, design, and art. </p>
+                                                <p><strong>BIODESIGN & OTHER THINGS</strong> is a project-oriented course that invites high school–age artists and scientists alike to explore the world of biodesign, an emergent transdiciplinary field that bridges biotechnology, design, and art. </p>
                                                 <p>In this course, students will learn to think transdisciplinarily; they will learn to utilize biodesign as a medium to engage with concepts in biotechnology, AI, and other related fields. More than that, students will be invited to imagine beyond the traditional classroom, beyond the internet’s “givens”—to not just solve problems predefined for them, but to understand the complex world we live in more deeply, so as to discover what they really matters to them.</p>
                                                 <p><strong>Students will develop their own project to be presented at the 2026 Biodesign Challenge in New York (MoMA & Parsons School of Design)</strong></p>
                                                 <br>
@@ -245,6 +245,9 @@
                                                 <br>
                                                 <p><strong><u>INSTRUCTORS</u></strong></p>
                                                 <P>Laurent Hsia</P>
+                                                <P>Rae Yu-Ping Hsu</P>
+                                                <P>Paul Gong</P>
+                                                <P>Kuang-Yi Ku</P>
 
                                             </div>
                                         </article>
