--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
                                                 <br>
                                                 <br>
                                                 <p><strong><u>INSTRUCTORS</u></strong></p>
-                                                <P>Laurent Hsia</P>
-                                                <P>Rae Yu-Ping Hsu</P>
-                                                <P>Paul Gong</P>
-                                                <P>Kuang-Yi Ku</P>
+                                                <P><strong>Laurent Hsia</strong> is a visual artist, biologist, and educator.</P>
+                                                <P><strong>Rae Yu-Ping Hsu</strong> is an artist and educator based between New York and Taipei. They currently teaches at NYU, The New School, and Shih Chien University. </P>
+                                                <P><strong>Paul Gong</strong> is a speculative designer, artist, and curator; he is one of the pioneers of speculative design in Taiwan. He is currently an Associate Professor Rank Specialist of the Department of Industrial Design at Shih Chien University in Taipei.</P>
+                                                <P><strong>Kuang-Yi Ku</strong> is a bioartist and speculative designer. He is currently an Assistant Professor at National Yang Ming Chiao Tung University and is pursuing a PhD at Sheffield Hallam University, UK. He is also the co-founder TW BioArt.</P>
 
                                             </div>
                                         </article>
